# ledger-prototype

./: Cargo.toml  prompts.md
crates/ledger/: Cargo.toml  README.md
crates/ledger/src/: account.rs  amount.rs  lib.rs  storage.rs  transaction.rs
crates/ledger/src/storage/: memory.rs  mod.rs  sqlite.rs
src/: main.rs
