[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sha2 = "0.10"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
